# flutter_pdf_core

./: CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
docs/: ARCHITECTURE.md  MILESTONES.md
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_pdf_core.podspec
ios/flutter_pdf_core/: Package.swift
lib/: flutter_pdf_core.dart  flutter_pdf_core_method_channel.dart  flutter_pdf_core_platform_interface.dart
lib/src/: bindings.dart  pdf_core_api.dart
macos/: flutter_pdf_core.podspec
macos/flutter_pdf_core/: Package.swift
rust/: Cargo.toml
rust/crates/pdf_ai/: Cargo.toml
rust/crates/pdf_ai/src/: chunker.rs  export.rs  lib.rs
rust/crates/pdf_cli/: Cargo.toml
rust/crates/pdf_cli/src/: main.rs
rust/crates/pdf_core/: Cargo.toml
rust/crates/pdf_core/src/: crypt.rs  document.rs  error.rs  filter.rs  lexer.rs  lib.rs  object.rs  parser.rs  stream.rs  writer.rs  xref.rs
rust/crates/pdf_ffi/: Cargo.toml
rust/crates/pdf_ffi/src/: api.rs
rust/crates/pdf_ops/: Cargo.toml
rust/crates/pdf_ops/src/: lib.rs  merge.rs  metadata.rs  page_tree.rs  rotate.rs  split.rs
rust/crates/pdf_text/: Cargo.toml
rust/crates/pdf_text/src/: content_stream.rs  extractor.rs  font.rs  lib.rs  text_state.rs
scripts/: build_android.sh  build_ios.sh  build_macos.sh
test/: flutter_pdf_core_method_channel_test.dart  flutter_pdf_core_test.dart
(+15 files in other folders)
