[workspace]
resolver = "2"
members = [
  "crates/pdf_core",
  "crates/pdf_ops",
  "crates/pdf_text",
  "crates/pdf_ai",
  "crates/pdf_ffi",
  "crates/pdf_cli"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Proprietary"
authors = ["Your Mate Apps"]

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
flate2 = "1"
tempfile = "3"