[package]
name = "pdf_ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pdf_core = { path = "../pdf_core" }
pdf_ops = { path = "../pdf_ops" }
pdf_text = { path = "../pdf_text" }
pdf_ai = { path = "../pdf_ai" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true